--- a/lesson01/task01/pom.xml
+++ b/lesson01/task01/pom.xml
@@ -4,4 +4,10 @@
     <groupId>JavaJunior.lesson01.task01</groupId>
     <artifactId>task01</artifactId>
     <version>1.0</version>
+    
+	<parent>
+        <artifactId>lesson01</artifactId>
+        <groupId>JavaJunior.lesson01</groupId>
+        <version>1.0</version>
+    </parent>
 </project>
