--- a/lesson01/pom.xml
+++ b/lesson01/pom.xml
@@ -10,5 +10,6 @@
         <module>task01</module>
         <module>task02</module>
 		<module>task03</module>
+        <module>task04</module>
     </modules>
 </project>
