--- a/lesson01/pom.xml
+++ b/lesson01/pom.xml
@@ -12,5 +12,6 @@
 		<module>task03</module>
         <module>task04</module>
 		<module>task05</module>
+		<module>task06</module>
     </modules>
 </project>
