--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>JavaJunior.lesson01</groupId>
-    <artifactId>lesson01</artifactId>
+    <groupId>JavaJunior</groupId>
+    <artifactId>JavaJunior</artifactId>
     <version>1.0</version>
 	<packaging>pom</packaging>
 	
 	<modules>
         <module>lesson01</module>
+		<module>OtherTasks</module>
     </modules>
 	
 	<properties>
