--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,10 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>JavaJunior</groupId>
     <artifactId>JavaJunior</artifactId>
-    <version>1.0</version>
+    <version>2.0</version>
 	<packaging>pom</packaging>
+	<name>junior</name>
+	<url>http://job4j.ru</url>
 	
 	<modules>
         <module>lesson01</module>
@@ -13,8 +15,17 @@
     </modules>
 	
 	<properties>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+	
+	<plugin>
+       <groupId>org.apache.maven.plugins</groupId>
+       <artifactId>maven-compiler-plugin</artifactId>
+       <version>3.3</version>
+       <configuration>
+           <compilerVersion>1.8</compilerVersion>
+       </configuration>
+    </plugin>
 </project>
