--- a/lesson01/pom.xml
+++ b/lesson01/pom.xml
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>JavaJunior.lesson01</groupId>
     <artifactId>lesson01</artifactId>
-    <version>1.0</version>
+    <groupId>ru.job4j.javajunior</groupId>
+    <version>2.0</version>
 	<packaging>pom</packaging>
-	
+
+    <parent>
+        <artifactId>javajunior</artifactId>
+        <groupId>ru.job4j</groupId>
+        <version>2.0</version>
+    </parent>
+
 	<modules>
-        <module>task01</module>
-        <module>task02</module>
-		<module>task03</module>
-        <module>task04</module>
-		<module>task05</module>
-		<module>task06</module>
+        <module>task01_01</module>
+		<module>task01_02</module>
+		<module>task01_03</module>
+		<module>task01_04</module>
+		<module>task01_05</module>
+		<module>task01_06</module>
+		<module>tasktest</module>
     </modules>
 </project>
