--- a/lesson01/task01_04/pom.xml
+++ b/lesson01/task01_04/pom.xml
@@ -2,19 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>lesson02</artifactId>
-    <groupId>ru.job4j.javajunior</groupId>
+    <groupId>ru.job4j.javajunior.lesson01</groupId>
+    <artifactId>task01_04</artifactId>
     <version>2.0</version>
-	<packaging>pom</packaging>
-
+	
     <parent>
-        <artifactId>javajunior</artifactId>
-        <groupId>ru.job4j</groupId>
+        <artifactId>lesson01</artifactId>
+        <groupId>ru.job4j.javajunior</groupId>
         <version>2.0</version>
     </parent>
-
-	<modules>
-        <module>task02_01</module>
-		<module>task02_03</module>
-    </modules>
 </project>
