--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>lesson01</module>
 		<module>lesson02</module>
 		<module>lesson03</module>
+        <module>lesson05</module>
     </modules>
 	
 	<properties>
