1. Создать модель User

--- a/lesson05/pom.xml
+++ b/lesson05/pom.xml
@@ -18,5 +18,6 @@
 		<module>task05_02</module>
 		<module>task05_03</module>
 		<module>task05_04</module>
+		<module>task05_05</module>
     </modules>
 </project>
