1. Создать элементарную структуру дерева

--- a/lesson05/pom.xml
+++ b/lesson05/pom.xml
@@ -19,5 +19,6 @@
 		<module>task05_03</module>
 		<module>task05_04</module>
 		<module>task05_05</module>
+		<module>task05_06</module>
     </modules>
 </project>
