--- a/lesson05/pom.xml
+++ b/lesson05/pom.xml
@@ -20,5 +20,6 @@
 		<module>task05_04</module>
 		<module>task05_05</module>
 		<module>task05_06</module>
+		<module>task05_07</module>
     </modules>
 </project>
