--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<module>lesson03</module>
         <module>lesson05</module>
 		<module>lesson07</module>
+		<module>lesson08</module>
     </modules>
 	
 	<properties>
