XML XSLT JDBC Оптимизация

--- a/lesson08/pom.xml
+++ b/lesson08/pom.xml
@@ -17,5 +17,6 @@
         <module>task08_01</module>
 		<module>task08_02</module>
 		<module>task08_03</module>
+		<module>task08_04</module>
     </modules>
 </project>
