--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>ru.job4j</groupId>
     <artifactId>javajunior</artifactId>
     <version>2.0</version>
-	<packaging>pom</packaging>
-	<name>junior</name>
-	<url>http://job4j.ru</url>
-	
-	<modules>
+    <packaging>pom</packaging>
+    <name>junior</name>
+    <url>http://job4j.ru</url>
+
+    <modules>
         <module>lesson01</module>
-		<module>lesson02</module>
-		<module>lesson03</module>
+        <module>lesson02</module>
+        <module>lesson03</module>
         <module>lesson05</module>
-		<module>lesson07</module>
-		<module>lesson08</module>
+        <module>lesson07</module>
+        <module>lesson08</module>
     </modules>
-	
-	<properties>
+
+    <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -42,9 +42,24 @@
             <artifactId>jcip-annotations</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901-1.jdbc4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.8.1</version>
+        </dependency>
     </dependencies>
-	
-	<build>
+
+    <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -68,5 +83,5 @@
                 </executions>
             </plugin>
         </plugins>
-    </build> 
+    </build>
 </project>
